Fri Feb 27 06:22:31 2004  Tim Janik  <timj@gtk.org>

	* artscompressor.cc:
	* artscompressor.idl:
	* bseadder.c:
	* bseatandistort.c:
	* bsefirfilter.c:
	* bseiirfilter.c:
	* bsemixer.c:
	* bsemult.c:
	* bsenoise.c:
	* bsesequencer.c:
	* bsesimpleadsr.c:
	* davcanyondelay.c:
	* davguitar.c:
	* davorgan.c:
	* davsyndrum.c:
	* davxtalstrings.c: fixed channel naming, identifiers and i18n.

Tue Jan 20 05:07:57 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* artscompressor.idl bsebalance.idl davbassfilter.idl davchorus.idl:
	Use "using namespace Bse" in the correct places.

Tue Jan 20 01:01:32 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* evaluator/bseevaluator.cc: Adapted source to the fact that
	bse-plugin-generator now finally uses Sfi::String instead of a
	gchar* representations.

Sat Jan 10 10:09:29 2004  Tim Janik  <timj@gtk.org>

	* evaluator/compiler.cc: fix include.

Tue Dec 23 05:46:26 2003  Tim Janik  <timj@gtk.org>

	* plugins/*.c: adapted to field order changes in BSE_REGISTER_OBJECT().

Mon Dec 22 23:58:47 2003  Tim Janik  <timj@gtk.org>

	* evaluator/bseevaluator.idl: declare this plugin "unstable" through
	type options.

Wed Dec 17 19:23:56 2003  Tim Janik  <timj@gtk.org>

	* icons/davbassfilter.png: added DavBassFilter icon.

	* davbassfilter.idl:
	* davbassfilter.cc: ported DavBassFilter.
	
	* davbassfilter.[hc]: removed old DavBassFilter code.
	
Wed Dec 17 19:19:08 2003  Tim Janik  <timj@gtk.org>

	* davbassfilter.cc: CVS copy of davbassfilter.c.

Mon Dec 15 22:56:22 2003  Tim Janik  <timj@gtk.org>

	* bseadder.c:
	* bsesequencer.c:
	* davsyndrum.c: flagged :skip-default: properties.

	* davsyndrum.c: 
	* davxtalstrings.c: fixed up trigger property flags.

Mon Dec 15 22:06:15 2003  Tim Janik  <timj@gtk.org>

	* Makefile.am: removed old unused cruft. fixed up idl generation
	rules, include idl files in dist tarballs.

	* plugins/evaluator/Makefile.am: fixups, removed cruft. build
	bseevaluator.so (properly namespace prefixed).
